force-app/main/default/objects/Billing_History__c/Billing_History__c.object-meta.xml
<CustomObject>
    <label>Billing History</label>
    <nameField>
        <label>Billing History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Billing Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>