force-app/main/default/objects/Billing_History__c/fields/Consultant__c.field-meta.xml
<CustomField>
    <fullName>Consultant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consultant</label>
    <referenceTo>Consultant__c</referenceTo>
    <relationshipLabel>Billing Histories</relationshipLabel>
    <relationshipName>Billing_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>