force-app/main/default/objects/Billing_History__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Billing Histories</relationshipLabel>
    <relationshipName>Billing_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>